# Katalogue

./: CHANGELOG.md  CONTRIBUTING.md  PR_PHASE1.md  PR_PHASE10.md  PR_PHASE11.md  PR_PHASE12.md  PR_PHASE13.md  PR_PHASE14.md  PR_PHASE15.md  PR_PHASE16.md  PR_PHASE17.md  PR_PHASE18.md  PR_PHASE2.md  PR_PHASE3.md  PR_PHASE4.md  PR_PHASE5.md  PR_PHASE6.md  PR_PHASE7.md  PR_PHASE8.md  PR_PHASE9.md  README.md  ROADMAP.md  test.kdcatalog
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
katalogue/: CMakeLists.txt
katalogue/data/: org.kde.katalogue.desktop  org.kde.katalogue.metainfo.xml
katalogue/src/cli/: katalogue_export_main.cpp  katalogue_import_vvv_main.cpp
katalogue/src/common/: katalogue_settings.cpp  katalogue_settings.h  katalogue_version.h.in
katalogue/src/core/: core_test.cpp  katalogue_database.cpp  katalogue_database.h  katalogue_scanner.cpp  katalogue_scanner.h  katalogue_types.h
katalogue/src/daemon/: katalogue_daemon.cpp  katalogue_daemon.h  main.cpp  org.kde.Katalogue1.xml
katalogue/src/gui/: katalogue_client.cpp  katalogue_client.h  main.cpp
katalogue/src/gui/qml/: AboutPage.qml  DirectoryTree.qml  EmptyCatalogPlaceholder.qml  FileDetailsDrawer.qml  FileView.qml  Main.qml  PreferencesPage.qml  VirtualFolderItemsView.qml  VirtualFoldersSidebar.qml  VolumeSidebar.qml
katalogue/systemd/: katalogued.service
katalogue/tests/: CMakeLists.txt  bench_catalog.cpp  tst_katalogue_daemon.cpp  tst_katalogue_database.cpp  tst_katalogue_scanner.cpp
packaging/: PKGBUILD.example  org.kde.katalogue.yml
